--- a/Dashboard.html
+++ b/Dashboard.html
@@ -335,7 +335,7 @@
             const resetZoom = () => setZoom(0.9);
 
             // Determine which content to show based on filename
-            const isWorkflow = fileName === '老师批改作业Workflow';
+            const isWorkflow = fileName === '示例：批改作业Workflow';
 
             return (
                 <div className="flex flex-col h-screen w-full bg-[#F4F4F4] overflow-hidden font-sans text-slate-800">
